--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -133,6 +133,12 @@
 
 /* Altura */
 
+@media screen and (max-height: 780px) {
+  .home__projetosRecentes {
+    display: none;
+  }
+}
+
 @media screen and (max-height: 680px) {
   .home__projetosRecentes {
     bottom: 6rem;
