--- a/src/components/Contato.module.css
+++ b/src/components/Contato.module.css
@@ -9,8 +9,9 @@
 
 .contato__container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  padding-top: 4rem;
 }
 
 .contato__container_redes,
@@ -49,7 +50,9 @@
 
 
 .contato__container_comunicacao {
-  border-top: 3px solid var(--laranja-padrao);
+  border-top: none;
+  padding-left: 8rem;
+    margin-right: 4rem;
 }
 
 
@@ -81,24 +84,51 @@
   color: var(--laranja-padrao);
 }
 
+.contato__container_redes_github {
+  padding-bottom: 0;
+}
+
 
 .retratoBg__contato {
   position: absolute;
   right: 0;
   bottom: 0;
+  width: 350px;
 }
 
 /* Responsivo */
 
 /* Largura */
 
+@media screen and (max-width: 1025px) {
+  .retratoBg__contato {
+    width: auto;
+  }
+}
+
 @media screen and (max-width: 450px) {
+
+  .contato__container {
+    flex-direction: column;
+  }
+
+  .contato__container_comunicacao{ 
+    padding-left: 0;
+    margin-right: 0;
+    margin-top: 4rem;
+  }
+
+
   .contato__container_redes_linkedin,
   .contato__container_redes_github,
   .contato__container_comunicacao_whatsapp,
   .contato__container_comunicacao_email {
   flex-direction: column;
   gap: 0.4rem;
+}
+
+.contato__container_comunicacao {
+  border-top: 3px solid var(--laranja-padrao);
 }
 
 .contato__container_redes_textos, 
@@ -115,6 +145,16 @@
   
 
 @media screen and (max-width: 380px) {
+
+  .contato__container {
+    padding-top: 0;
+  }
+
+  .contato__container_comunicacao {
+    margin-top: 2rem;
+  }
+
+
   .contato__titulo {
     font-size: 2rem;
     margin-top: 2rem;
@@ -128,6 +168,12 @@
 
 /* Altura */ 
 
+@media screen and (max-height: 900px) {
+  .retratoBg__contato {
+    width: 200px;
+  }
+}
+
 @media screen and (max-height: 625px) {
   .contato__container {
     flex-direction: row;
@@ -138,10 +184,6 @@
     border: none;
     padding-left: 8rem;
     margin-right: 4rem;
-  }
-
-  .contato__container_redes {
-    padding-right: 8rem;
   }
 
   .contato__container_redes_github {
