--- a/src/components/Contato.module.css
+++ b/src/components/Contato.module.css
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  overflow-y: hidden;
 }
 
 .contato__container {
@@ -52,7 +53,7 @@
 .contato__container_comunicacao {
   border-top: none;
   padding-left: 8rem;
-    margin-right: 4rem;
+  margin-right: 4rem;
 }
 
 
@@ -106,7 +107,7 @@
   }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 820px) {
 
   .contato__container {
     flex-direction: column;
@@ -176,12 +177,20 @@
   }
 }
 
+@media screen and (max-height: 767px) {
+  .contato__container {
+    padding-top: 0;
+  }
+}
+
+
+
 @media screen and (max-height: 625px) {
   .contato__container {
     flex-direction: row;
     align-items: center;
   }
-
+  
   .contato__container_comunicacao {
     border: none;
     padding-left: 8rem;
@@ -194,5 +203,25 @@
 
   .contato__titulo {
     margin-top: 4rem;
+  }
+}
+
+/* * */
+
+@media screen and (max-height: 900px) and (max-width: 900px) {
+  .contato__container {
+    padding-top: 0;
+  }
+
+  .contato__container_comunicacao {
+    margin-top: 0;
+  }
+
+  .contato__container_redes_github {
+    padding-bottom: 2rem;
+  }
+
+  .contato__titulo {
+    margin-top: 2rem;
   }
 }
