--- a/src/components/Contato.module.css
+++ b/src/components/Contato.module.css
@@ -5,6 +5,8 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  position: absolute;
+  width: 100vw;
 }
 
 .contato__container {
