--- a/src/components/Projetos.module.css
+++ b/src/components/Projetos.module.css
@@ -6,6 +6,8 @@
   height: calc(100vh - 5.125rem);
   background-size: cover;
   overflow-y: hidden;
+  position: absolute;
+  width: 100vw;
 }
 .projetos__container {
   position: absolute;
